[package]
name = "ptrace-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.20.0"
env_logger = "0.11.5"
log = "0.4.22"
nix = { version = "0.29.0", features = ["sched","ptrace","signal"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
